auth forms components: password inputs invisible font bug was fixed

--- a/client/src/components/LoginForm/LoginForm.scss
+++ b/client/src/components/LoginForm/LoginForm.scss
@@ -86,6 +86,12 @@
       }
     }
 
+    #password-input {
+      &:not(:placeholder-shown) {
+        font-family: "Times New Roman", Times, serif;
+      }
+    }
+
     span {
       @include user-select-none;
       position: absolute;
